src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>bizible__Ad_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Ad Group</label>
        <referenceTo>bizible__Ad_Group__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__Bizible_UserId__c</fullName>
        <label>Bizible UserId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__City__c</fullName>
        <label>Bizible City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__Country__c</fullName>
        <label>Bizible Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__Device__c</fullName>
        <label>Bizible Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__Keyword__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Keyword</label>
        <referenceTo>bizible__Keyword__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__LandingPage__c</fullName>
        <description>Bizible Landing Page</description>
        <label>Bizible Landing Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bizible__Medium__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Medium</label>
        <referenceTo>bizible__Medium__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__ReferrerPage__c</fullName>
        <description>Bizible Referrer Page</description>
        <label>Bizible Referrer Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bizible__Region__c</fullName>
        <label>Bizible Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__Search_Phrase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Search Phrase</label>
        <referenceTo>bizible__Search_Phrase__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__Text_Ad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Ad Content</label>
        <referenceTo>bizible__Text_Ad__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__WebSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible WebSource</label>
        <referenceTo>bizible__WebSource__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c21_agent__c</fullName>
        <label>c21_agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c21_buyer__c</fullName>
        <label>c21_buyer</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c21_contactID__c</fullName>
        <label>c21_contactID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c21_contactsource__c</fullName>
        <label>c21_contactsource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c21_datecreated__c</fullName>
        <label>c21_datecreated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c21_established_client__c</fullName>
        <label>c21_established_client</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c21_landlord__c</fullName>
        <label>c21_landlord</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c21_name__c</fullName>
        <label>c21_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c21_office_postcode__c</fullName>
        <label>c21_office_postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c21_office_suburb__c</fullName>
        <label>c21_office_suburb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c21_officeid__c</fullName>
        <label>c21_officeid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c21_officestate__c</fullName>
        <label>c21_officestate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c21_potential_landlord__c</fullName>
        <label>c21_potential_landlord</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c21_potential_seller__c</fullName>
        <label>c21_potential_seller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c21_potential_tenant__c</fullName>
        <label>c21_potential_tenant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c21_seller__c</fullName>
        <label>c21_seller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c21_tenant__c</fullName>
        <label>c21_tenant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c21_trantype__c</fullName>
        <label>c21_trantype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clickJumio_Status__c</fullName>
        <label>Jumio Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attempted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>click_Is_this_loan_for_an_investment_p__c</fullName>
        <label>Is this loan for an investment property</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>credit_card_limits__c</fullName>
        <label>credit card limits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dpndnt_on_no__c</fullName>
        <label>dpndnt on no?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dpndnt_on_yes__c</fullName>
        <label>dpndnt on yes?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rpp_First_Listed_Date__c</fullName>
        <description>First Listed date - From RP Data</description>
        <label>First Listed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rpp_First_Listed_Price__c</fullName>
        <description>First Listed price - RPData</description>
        <label>First Listed Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rpp_Last_Listed_Date__c</fullName>
        <description>Last Listed date - RPData</description>
        <label>Last Listed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rpp_Last_Listed_Price__c</fullName>
        <description>Last Listed price - RPData</description>
        <label>Last Listed Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>utm_campaign__c</fullName>
        <label>UTM Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_content__c</fullName>
        <label>UTM Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_medium__c</fullName>
        <label>UTM Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_source__c</fullName>
        <label>UTM Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_term__c</fullName>
        <label>UTM Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vhc__CallFile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call File</label>
        <referenceTo>vhc__Campaign__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vhc__TimeZone__c</fullName>
        <label>TimeZone</label>
        <picklist>
            <picklistValues>
                <fullName>(UTC-12:00) International Date Line West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-11:00) Coordinated Universal Time-11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-10:00) Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-09:00) Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-08:00) Baja California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-08:00) Pacific Time (US &amp; Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-07:00) Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-07:00) Chihuahua, La Paz, Mazatlan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-07:00) Mountain Time (US &amp; Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-06:00) Central America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-06:00) Central Time (US &amp; Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-06:00) Guadalajara, Mexico City, Monterrey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-06:00) Saskatchewan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-05:00) Bogota, Lima, Quito</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-05:00) Eastern Time (US &amp; Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-05:00) Indiana (East)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-04:30) Caracas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-04:00) Asuncion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-04:00) Atlantic Time (Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-04:00) Cuiaba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-04:00) Georgetown, La Paz, Manaus, San Juan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-04:00) Santiago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-03:30) Newfoundland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-03:00) Brasilia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-03:00) Buenos Aires</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-03:00) Cayenne, Fortaleza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-03:00) Greenland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-03:00) Montevideo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-03:00) Salvador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-02:00) Coordinated Universal Time-02</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>vhc__targetOutboundCampaignId__c</fullName>
        <label>Target Hermes Cloud Outbound Campaign Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ACF_Commercial_Loans</fullName>
        <booleanFilter>(1 or 4) and 2 AND 3 AND 5</booleanFilter>
        <columns>Last_Pardot_Form_Handler_Change_Time__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>Current_Loan_Type__c</columns>
        <columns>Last_Pardot_Form_Handler__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Last_Pardot_Form_Handler__c</field>
            <operation>contains</operation>
            <value>Commercial</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>Closed Lost</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>Appointed</value>
        </filters>
        <filters>
            <field>Current_Loan_Type__c</field>
            <operation>equals</operation>
            <value>Commercial</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Lead.Car</value>
        </filters>
        <label>ACF - Commercial Loans</label>
    </listViews>
    <listViews>
        <fullName>ACF_Loans_Assignment_DH</fullName>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>acfCurrentRate__c</columns>
        <columns>Current_Lender__c</columns>
        <columns>acfWhyAreYouRefinancing__c</columns>
        <columns>acfEmployment_Type__c</columns>
        <columns>acfLast_2_years_Tax_Return_or_ATO_NOA__c</columns>
        <columns>acfHow_is_your_current_credit_history__c</columns>
        <columns>click_Is_this_loan_for_an_investment_p__c</columns>
        <columns>FULL_NAME</columns>
        <columns>acf_partner_account__c</columns>
        <columns>utm_source__c</columns>
        <columns>utm_campaign__c</columns>
        <columns>utm_term__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>ACF Loans Assignment (DH)</label>
        <queue>ACF_Loans_Assignment</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ACF_Online_All</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Calls_Last_Disposition__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Type__c</field>
            <operation>contains</operation>
            <value>ACF Refi</value>
        </filters>
        <filters>
            <field>Calls_Last_Disposition__c</field>
            <operation>contains</operation>
            <value>Progress</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>4/1/2016 12:00 AM</value>
        </filters>
        <label>ACF Online All</label>
        <sharedTo>
            <role>Phone_Broker_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ACF_Online_Assignment_DH</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>Calls_Last_Disposition__c</columns>
        <columns>acfCurrentRate__c</columns>
        <columns>Current_Lender__c</columns>
        <columns>acfWhyAreYouRefinancing__c</columns>
        <columns>acfEmployment_Type__c</columns>
        <columns>acfHow_is_your_current_credit_history__c</columns>
        <columns>acf_partner_account__c</columns>
        <columns>utm_source__c</columns>
        <columns>utm_campaign__c</columns>
        <columns>utm_term__c</columns>
        <columns>OLP_Account_Created_DateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.ACF_New_Loans,Lead.ACF_Refi</value>
        </filters>
        <filters>
            <field>Click_Is_Phone_Broker_customer__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>ACF Online Assignment (DH) non pb</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ACF_Online_Assignment_DH_pb</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>Click_Is_Phone_Broker_customer__c</columns>
        <columns>Is_Phone_Broker_Customer__c</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>acfCurrentRate__c</columns>
        <columns>Current_Lender__c</columns>
        <columns>acfWhyAreYouRefinancing__c</columns>
        <columns>acfEmployment_Type__c</columns>
        <columns>acfLast_2_years_Tax_Return_or_ATO_NOA__c</columns>
        <columns>acfHow_is_your_current_credit_history__c</columns>
        <columns>click_Is_this_loan_for_an_investment_p__c</columns>
        <columns>FULL_NAME</columns>
        <columns>acf_partner_account__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.ACF_New_Loans,Lead.ACF_Refi</value>
        </filters>
        <filters>
            <field>Click_Is_Phone_Broker_customer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Is_Phone_Broker_Customer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filters>
        <label>ACF Online Assignment (DH) pb</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ACF_Online_Contacted_in_Progress</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Calls_Last_Disposition__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Lead_Type__c</field>
            <operation>contains</operation>
            <value>ACF Refi</value>
        </filters>
        <filters>
            <field>Calls_Last_Disposition__c</field>
            <operation>contains</operation>
            <value>Progress</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>4/1/2016 12:00 AM</value>
        </filters>
        <label>ACF Online Contacted in Progress</label>
        <sharedTo>
            <role>Phone_Broker_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>Lead_Type__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
        <sharedTo>
            <role>Cars_Management</role>
            <role>Executive_Team</role>
            <role>Risk_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Leads_Hot_NEW</fullName>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Affiliate_campaign__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Click_Fresh_Loans,Lead.Click_Refi</value>
        </filters>
        <label>All Leads (Hot) - NEW</label>
        <sharedTo>
            <role>Executive_Team</role>
            <roleAndSubordinates>Executive_Team</roleAndSubordinates>
            <roleAndSubordinates>Presales_Management</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Leads_Hot_NEW_HOME</fullName>
        <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Affiliate_campaign__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Affiliate_campaign__c</field>
            <operation>equals</operation>
            <value>Coreg</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Google Adwords</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>Inbound Home</value>
        </filters>
        <label>All Leads (Hot) - NEW HOME</label>
        <sharedTo>
            <role>Executive_Team</role>
            <roleAndSubordinates>Executive_Team</roleAndSubordinates>
            <roleAndSubordinates>Presales_Management</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>By_Agent</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Affiliate_campaign__c</columns>
        <columns>Lead_Type__c</columns>
        <columns>Total_Calls__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>rpric</value>
        </filters>
        <label>By Agent</label>
        <sharedTo>
            <role>Cars_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>C21_leads</fullName>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>acfCurrentRate__c</columns>
        <columns>Current_Lender__c</columns>
        <columns>acfWhyAreYouRefinancing__c</columns>
        <columns>acfEmployment_Type__c</columns>
        <columns>acfLast_2_years_Tax_Return_or_ATO_NOA__c</columns>
        <columns>acfHow_is_your_current_credit_history__c</columns>
        <columns>click_Is_this_loan_for_an_investment_p__c</columns>
        <columns>FULL_NAME</columns>
        <columns>acf_partner_account__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>utm_campaign__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>C21</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>11/18/2015 12:00 AM</value>
        </filters>
        <label>C21 leads</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CL_Future</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>acfLoan_Amount__c</columns>
        <columns>acfApproximately_how_much_is_your_house__c</columns>
        <columns>Current_Lender__c</columns>
        <columns>acfCurrentRate__c</columns>
        <columns>Total_Calls__c</columns>
        <columns>Calls_Last_Disposition__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Click_Fresh_Loans,Lead.Click_Refi</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>Closed Lost</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>5/1/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Calls_Last_Disposition__c</field>
            <operation>equals</operation>
            <value>Future</value>
        </filters>
        <label>1 CL - Future</label>
    </listViews>
    <listViews>
        <fullName>CL_In_Progress</fullName>
        <columns>FULL_NAME</columns>
        <columns>acf_partner_account__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>acfLoan_Amount__c</columns>
        <columns>acfApproximately_how_much_is_your_house__c</columns>
        <columns>Calls_Last_Disposition__c</columns>
        <columns>Current_Lender__c</columns>
        <columns>acfCurrentRate__c</columns>
        <columns>Total_Calls__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Click_Fresh_Loans,Lead.Click_Refi</value>
        </filters>
        <filters>
            <field>Calls_Last_Disposition__c</field>
            <operation>contains</operation>
            <value>Dashboard,In Progress,Future</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>Closed Lost</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>5/1/2016 12:00 AM</value>
        </filters>
        <label>0 CL - In Progress</label>
    </listViews>
    <listViews>
        <fullName>ClickRefiAssignment_Lead</fullName>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FULL_NAME</columns>
        <columns>acf_partner_account__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>acfLoan_Amount__c</columns>
        <columns>acfApproximately_how_much_is_your_house__c</columns>
        <columns>Current_Lender__c</columns>
        <columns>acfCurrentRate__c</columns>
        <columns>acfBankdetailStatus__c</columns>
        <columns>clickJumio_Status__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Click_Round_Robin_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>Closed Lost</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Click_Fresh_Loans,Lead.Click_Refi</value>
        </filters>
        <label>Click Loans Assignment</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClickRefiAssignment_Leaddh</fullName>
        <columns>Click_Round_Robin_Id__c</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>acfCurrentRate__c</columns>
        <columns>Current_Lender__c</columns>
        <columns>acfWhyAreYouRefinancing__c</columns>
        <columns>acfEmployment_Type__c</columns>
        <columns>acfLast_2_years_Tax_Return_or_ATO_NOA__c</columns>
        <columns>acfHow_is_your_current_credit_history__c</columns>
        <columns>FULL_NAME</columns>
        <columns>acf_partner_account__c</columns>
        <columns>utm_source__c</columns>
        <columns>utm_campaign__c</columns>
        <columns>utm_term__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Click_Fresh_Loans,Lead.Click_Refi</value>
        </filters>
        <label>Click Loans Assignment (DH)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>ACF_New_Loans</fullName>
        <active>true</active>
        <businessProcess>Lead Process for Click Loans</businessProcess>
        <label>ACF New Loans</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACF_Refi</fullName>
        <active>true</active>
        <businessProcess>Lead Process for Click Loans</businessProcess>
        <label>ACF Refi</label>
    </recordTypes>
    <recordTypes>
        <fullName>Car</fullName>
        <active>true</active>
        <businessProcess>Car</businessProcess>
        <description>Car Record Type</description>
        <label>Car</label>
    </recordTypes>
    <recordTypes>
        <fullName>Click_Fresh_Loans</fullName>
        <active>true</active>
        <businessProcess>Lead Process for Click Loans</businessProcess>
        <label>Click New Loans</label>
    </recordTypes>
    <recordTypes>
        <fullName>Click_Refi</fullName>
        <active>true</active>
        <businessProcess>Lead Process for Click Loans</businessProcess>
        <label>Click Refi</label>
    </recordTypes>
    <recordTypes>
        <fullName>Home</fullName>
        <active>true</active>
        <businessProcess>Home</businessProcess>
        <description>Home Record Type</description>
        <label>Home</label>
    </recordTypes>
    <recordTypes>
        <fullName>Home_Dialler</fullName>
        <active>true</active>
        <businessProcess>Home Dialler</businessProcess>
        <description>Home lead record for dialler</description>
        <label>Home Dialler</label>
    </recordTypes>
    <recordTypes>
        <fullName>Risk</fullName>
        <active>true</active>
        <businessProcess>RIsk</businessProcess>
        <description>Risk Record Type</description>
        <label>Risk</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>